--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="shorcut icon" type="image" href="guitar-pink.svg">
   <title>JS Drum Kit</title>
 </head>
 <body>
+  <h1>Press the keys on your keyboard to activate the sounds!</h1>
 
   <div class="keys">
     <div data-key="65" class="key">
